--- a/themes/laurel-leaf/assets/css/laurelleaf.css
+++ b/themes/laurel-leaf/assets/css/laurelleaf.css
@@ -8,6 +8,7 @@ body {
 
 h1, h2, h3 {
     font-family: 'Kanit', sans-serif;
+    font-weight: 800;
     color: inherit;
 }
 
@@ -47,7 +48,8 @@ a {
     border-width: 0 0 1px;
 }
 ul.nav > li {
-    font-family: 'Kanit', serif;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 800;
 }
 
 
