--- a/themes/laurel-leaf/partials/site/header.htm
+++ b/themes/laurel-leaf/partials/site/header.htm
@@ -32,8 +32,8 @@
                     <a href="{{ 'home'|page }}">HOME <br>
                     <span class="roboto-slab hidden-xs">News & Events</span></a>
                 </li>
-                <li class="{% if this.page.id == 'ajax' %}active{% endif %}">
-                    <a href="{{ 'ajax'|page }}">MENU <br>
+                <li class="{% if this.page.id == 'food-drinks' %}active{% endif %}">
+                    <a href="{{ 'food-drinks'|page }}">MENU <br>
                     <span class="roboto-slab hidden-xs">Food & Drinks</span></a>
                 </li>
                 <li class="{% if this.page.id == 'plugins' %}active{% endif %}">
