--- a/themes/laurel-leaf/assets/css/laurelleaf.css
+++ b/themes/laurel-leaf/assets/css/laurelleaf.css
@@ -52,19 +52,148 @@ ul.nav > li {
     font-weight: 800;
 }
 
+.shadow {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-box-shadow: inset 0px 0px 25px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: inset 0px 0px 25px 2px rgba(0,0,0,0.75);
+    box-shadow: inset 0px 0px 25px 2px rgba(0,0,0,0.75);
+    top: 0;
+    left: 0;
+}
+
+.carousel-control .icon-chevron-left,
+.carousel-control .icon-chevron-right {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    z-index: 5;
+}
 
 
-/* iPhones, Smartphones Portrait */
-@media screen and (max-width: 768px) {
-    body {
-        padding-top: 70px;
-    }
+.carousel-caption {
+    left: 55%;
+    right: 5%;
+    padding-bottom: 30px;
+    background: rgba(255,255,255,0.8);
+    color: black;
+    text-align: left;
+    padding: 0px 20px 10px 20px;
+    text-shadow: none;
+}
 
-    .navbar-header .navbar-brand {
-        padding-left: 233px;
-        background-size: auto 60%;
-        margin-left: 10px;
-    }
+.cost{
+    position: absolute;
+    right: 5px;
+    bottom: 10px;
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    -ms-transform: rotate(5deg);
+    -o-transform: rotate(5deg);
+    transform: rotate(5deg);
+}
+
+.star-content{
+   position: absolute;
+    top: 10%;
+    left: 3%;
+    color: white;
+    font-size: 250%;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 700;
+}
+
+.star {
+    background: #00A74B;
+    width: 80px;
+    height: 80px;
+    position: relative;
+    text-align: center;
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.5);
+}
+.star:before, .star:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 80px;
+    width: 80px;
+    background: #00A74B;
+}
+.star:before {
+    -webkit-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    -o-transform: rotate(30deg);
+}
+.star:after {
+    -webkit-transform: rotate(60deg);
+    -moz-transform: rotate(60deg);
+    -ms-transform: rotate(60deg);
+    -o-transform: rotate(60deg);
+}
+
+.nav-pills > li {
+    float: left;
+    width: 50%;
+    border: 1px solid #1fb05f;
+    text-align: center;
+}
+
+.nav-pills > li + li {
+    margin-left: 0;
+}
+
+.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+    color: #ffffff;
+    background-color: #1fb05f;
+    border-radius: inherit;
+}
+
+.vegan::after{
+
+}
+
+.vegetarian:after{
+    background-image: url('/themes/laurel-leaf/assets/images/custom-icons/vegetarian@2x.png');
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    content: "";
+}
+
+.spicy:after{
+    background-image: url('/themes/laurel-leaf/assets/images/custom-icons/spicy@2x.png');
+    background-repeat: no-repeat;
+    background-size: 25px 25px;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    content: "";
+}
+
+.new:before{
+    background-image: url('/themes/laurel-leaf/assets/images/custom-icons/new@2x.png');
+    background-repeat: no-repeat;
+    background-size: 30px 30px;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    content: "";
+    margin-bottom: -9px;
+}
+
+.icon-heart {
+    border: none;
+    background: none;
+    color: rgba(31, 176, 95, 0.38);
+}
+
+table.allergene td.char {
+    width: 3%;
 }
 
 /* bigger Screens */
@@ -77,7 +206,7 @@ ul.nav > li {
         height: 120px;
         padding-top: 22px;
     }
-    
+
     .navbar-collapse {
         float: right;
     }
@@ -95,5 +224,60 @@ ul.nav > li {
 
     .navbar-inverse .navbar-collapse:not(.in):not(.collapsing) .navbar-nav li > a:hover:after {
         background: #00A74B;
+    }
+
+    #heroImage p.description{
+        width: 80%;
+    }
+}
+
+/* iPhones, Smartphones Portrait */
+@media screen and (max-width: 768px) {
+    body {
+        padding-top: 70px;
+    }
+
+    .navbar-header .navbar-brand {
+        padding-left: 233px;
+        background-size: auto 60%;
+        margin-left: 10px;
+    }
+
+    .carousel-caption {
+        left: 5%;
+        right: 5%;
+        padding-bottom: 50px;
+        text-align: left;
+        padding: 0px 20px 10px 20px;
+        text-shadow: none;
+        font-size: 85%;
+    }
+
+    .carousel-caption h3{
+        font-size: 130%
+    }
+
+    #heroImage p.description{
+        font-size: 90%;
+        width: 70%;
+    }
+
+    .star-content{
+        position: absolute;
+        top: 10%;
+        left: 3%;
+        color: white;
+        font-size: 290%;
+    }
+
+    .shadow {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        -webkit-box-shadow: inset 0px 0px 10px 2px rgba(0,0,0,0.55);
+        -moz-box-shadow: inset 0px 0px 10px 2px rgba(0,0,0,0.55);
+        box-shadow: inset 0px 0px 10px 2px rgba(0,0,0,0.55);
+        top: 0;
+        left: 0;
     }
 }
