--- a/themes/laurel-leaf/layouts/default.htm
+++ b/themes/laurel-leaf/layouts/default.htm
@@ -26,6 +26,7 @@ theme = "dark-bottom"
         <link href="{{ [
         'assets/css/vendor.css',
         'assets/css/simple-sidebar.css',
+        'assets/vendor/jquery-nice-select-1.1.0/css/nice-select.css',
         'assets/css/theme.css'
         ]|theme }}" rel="stylesheet">
         <link rel="stylesheet" href="{{ 'assets/css/laurelleaf.css'|theme }}">
@@ -52,6 +53,7 @@ theme = "dark-bottom"
 
         <!-- Scripts -->
         <script src="{{ 'assets/vendor/jquery.js'|theme }}"></script>
+        <script src="{{ 'assets/vendor/jquery-nice-select-1.1.0/js/jquery.nice-select.js'|theme }}"></script>
         <script src="{{ 'assets/vendor/bootstrap.js'|theme }}"></script>
         <script src="{{ 'assets/javascript/app.js'|theme }}"></script>
         {% framework extras %}
