--- a/themes/laurel-leaf/partials/site/food/allergene.htm
+++ b/themes/laurel-leaf/partials/site/food/allergene.htm
@@ -1,7 +1,7 @@
 description = "Allergie Codex"
 ==
 <div class="table-responsive">
-    <table class="table table-condensed allergene">
+    <small><table class="table table-condensed allergene">
         <tr>
             <b>Allergie Codex:</b>
         </tr>
@@ -42,5 +42,5 @@ description = "Allergie Codex"
             <td></td>
         </tr>
 
-    </table>
+    </table></small>
 </div>
