--- a/themes/laurel-leaf/partials/site/header.htm
+++ b/themes/laurel-leaf/partials/site/header.htm
@@ -36,12 +36,12 @@
                     <a href="{{ 'food-drinks'|page }}">MENU <br>
                     <span class="roboto-slab hidden-xs">Food & Drinks</span></a>
                 </li>
-                <li class="{% if this.page.id == 'plugins' %}active{% endif %}">
-                    <a href="{{ 'plugins'|page }}">GALLERY <br>
+                <li class="{% if this.page.id == 'photo-gallery' %}active{% endif %}">
+                    <a href="{{ 'photo-gallery'|page }}">GALLERY <br>
                         <span class="roboto-slab hidden-xs">Events & Location</span></a>
                 </li>
-                <li class="{% if this.page.id == 'plugins' %}active{% endif %}">
-                    <a href="{{ 'plugins'|page }}">CONTACT <br>
+                <li class="{% if this.page.id == 'contact-reservation' %}active{% endif %}">
+                    <a href="{{ 'contact-reservation'|page }}">CONTACT <br>
                         <span class="roboto-slab hidden-xs">& Table Reservation</span></a>
                 </li>
 
