--- a/themes/laurel-leaf/assets/css/laurelleaf.css
+++ b/themes/laurel-leaf/assets/css/laurelleaf.css
@@ -99,6 +99,11 @@ ul.nav > li {
     transform: rotate(5deg);
 }
 
+
+.relativ {
+    position: relative;
+}
+
 .star-content{
    position: absolute;
     top: 10%;
@@ -218,6 +223,123 @@ table.allergene td.char {
 
 .nice-select{
     line-height: 29px;
+    background-color: #1eb05e;
+    border-radius: 0;
+    border: solid 1px #0a793a;
+
+    font-size: 14px;
+    font-weight: normal;
+    height: 42px;
+    line-height: 40px;
+    outline: none;
+    padding-left: 18px;
+    padding-right: 30px;
+    text-align: left !important;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    white-space: nowrap;
+    width: auto;
+    color: white;
+}
+
+.nice-select .list {
+    background-color: #1eb05e;
+    border-radius: 0;
+    box-shadow: 0 0 0 1px rgba(68, 68, 68, 0.11);
+    box-sizing: border-box;
+    margin-top: 4px;
+    opacity: 0;
+    overflow: hidden;
+    padding: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    -webkit-transform-origin: 50% 0;
+    -ms-transform-origin: 50% 0;
+    transform-origin: 50% 0;
+    -webkit-transform: scale(0.75) translateY(-21px);
+    -ms-transform: scale(0.75) translateY(-21px);
+    transform: scale(0.75) translateY(-21px);
+    -webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
+    transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
+    z-index: 9;
+}
+
+.nice-select:after {
+    border-bottom: 2px solid white;
+    border-right: 2px solid white;
+    content: '';
+    display: block;
+    height: 5px;
+    margin-top: -4px;
+    pointer-events: none;
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    -webkit-transform-origin: 66% 66%;
+    -ms-transform-origin: 66% 66%;
+    transform-origin: 66% 66%;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transition: all 0.15s ease-in-out;
+    transition: all 0.15s ease-in-out;
+    width: 5px;
+}
+
+.nice-select .option:hover, .nice-select .option.focus, .nice-select .option.selected.focus {
+    background-color: #108543;
+}
+
+.nice-select.wide {
+    font-family: 'Kanit', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.nice-select:active, .nice-select.open, .nice-select:focus {
+    border-color: #11ac54;
+}
+
+h3.menue-header{
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    text-align: center;
+}
+
+h3.menue-header + hr{
+    margin-top: 0;
+}
+
+.weekday {
+    padding-top: 20px;
+    font-size: 12px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+
+.weekday > hr, .weekday + hr {
+    margin-top: 5px;
+}
+
+.btn-info {
+    color: #ffffff;
+    background-color: #1eb05e;
+    border-color: #189950;
+}
+
+.btn-info:hover, .btn-info:focus, .btn-info:active  {
+    color: #ffffff;
+    background-color: #219d58;
+    border-color: #189950;
 }
 
 /* bigger Screens */
@@ -253,6 +375,25 @@ table.allergene td.char {
     #heroImage p.description{
         width: 80%;
     }
+
+    h1.lunchoffer {
+    background: url('/themes/laurel-leaf/assets/images/lunchoffer-3leafs.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 30px;
+}
+
+h1.lunchoffer::after {
+    content: "";
+    background: url('/themes/laurel-leaf/assets/images/lunchoffer-3leafs.png');
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: 30px;  
+    display: inline-block;
+    position: absolute;
+    width: 130px;
+    height: 50px;
+}
 }
 
 /* iPhones, Smartphones Portrait */
