--- a/themes/laurel-leaf/partials/site/food/foodwrapper.htm
+++ b/themes/laurel-leaf/partials/site/food/foodwrapper.htm
@@ -2,7 +2,6 @@
 
     <div class="row">
 
-
         {% set foodCategory = '' %}
 
         {% for chunked in foods.chunk(13) %}
@@ -14,13 +13,13 @@
                     {% set class = '' %}
 
                     {% if food.foodcategory.name not in foodCategory %}
-
-                        <h3>{{ food.foodcategory.name }}</h3>
-
+                        <h3 class="menue-header">{{ food.foodcategory.name }}</h3>
+                        <hr>
                         {% set foodCategory = food.foodcategory.name %}
                     {% endif %}
+
                     <div class="row">
-                        <div class="col-xs-9 col-md-9">
+                        <div class="col-xs-9">
                             <p id="item-{{ food.id }}" class="index">
                                 <strong class="
                                     {% if food.new == true %}
@@ -46,29 +45,17 @@
                                             {{ allergene }}
                                         {% endfor %}
                                     </small>
-                                </sup> <br>
+                                </sup>
                                 {% if food.description %}
-                                    {{ food.description }} <br>
+                                    <br> {{ food.description }}
                                 {% endif %}
-                                € {{ food.amount|number_format(2, ',', '.') }}
                             </p>
                         </div>
-
-                        <div class="col-xs-3 col-md-3">
-                            <form
-                                    data-request="onTodaysFoodChoice"
-                                    data-request-update="foodchoice: '#todaysfoodchoice'">
-
-                                <input type="hidden" name="id" value="{{ food.id }}">
-
-                                <button
-                                        id="heart"
-                                        type="submit"
-                                        class="icon-heart icon-2x light-green">
-                                </button>
-                            </form>
+                        <div class="col-xs-3 text-right">
+                            € {{ food.amount|number_format(2, ',', '.') }}
                         </div>
                     </div>
+
 
                 {% endfor %}
 
@@ -76,12 +63,9 @@
 
         {% endfor %}
 
-
     </div>
 
 {% else %}
-
-
 
     <div class="text-center">
         <p>
