--- a/themes/laurel-leaf/partials/site/food/spanferkel.htm
+++ b/themes/laurel-leaf/partials/site/food/spanferkel.htm
@@ -1,4 +1,4 @@
 description = "Tip für deine Feier"
 ==
-<h4 style="color: red;"><em>Unser Tip für deine Feier!</em></h4>
+<h4 style="color: #00A74B;"><em>Unser Tip für deine Feier!</em></h4>
 <p>Knuspriges Spanferkel mit Semmelfülle und Beilagen, für Gruppen ab 20 Personen auf Vorbestellung.</p>
