--- a/themes/laurel-leaf/layouts/default.htm
+++ b/themes/laurel-leaf/layouts/default.htm
@@ -20,7 +20,7 @@ theme = "dark-bottom"
         <link rel="icon" type="image/png" href="{{ 'assets/images/laurel-leaf.png'|theme }}">
 
         <!-- FONTS -->
-        <link href="https://fonts.googleapis.com/css?family=Kanit:800|Roboto+Slab:300,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Kanit:800|Roboto+Slab:300,700|Indie+Flower" rel="stylesheet">
 
         <!-- STYLESHEETS -->
         <link href="{{ [
