--- a/themes/laurel-leaf/partials/site/footer.htm
+++ b/themes/laurel-leaf/partials/site/footer.htm
@@ -1,6 +1,9 @@
 <div id="footer">
     <div class="container">
-        <hr />
-        <p class="muted credit">&copy; 2009 - {{ "now"|date("Y") }} Laurel Leaf Irish Pub Vienna.</p>
+
+        <p class="muted credit p50tb">&copy; 2009 - {{ "now"|date("Y") }} Laurel Leaf Irish Pub Vienna.</p>
+
     </div>
 </div>
+
+
