--- a/themes/laurel-leaf/partials/site/heroimage.htm
+++ b/themes/laurel-leaf/partials/site/heroimage.htm
@@ -25,7 +25,7 @@ use Milo\HeroImage\Models\HeroImage;
                      alt="{{ heroimage.title }} {{ heroimage.description }}"
                      width="100%"
                      class="hidden-sm hidden-md hidden-lg">
-                <div class="shadow"></div>
+                <!-- <div class="shadow"></div> -->
                 {% if heroimage.cost %}
                 <div class="carousel-caption">
                     <h3>{{ heroimage.title|upper }}</h3>
