--- a/themes/laurel-leaf/partials/food_today.htm
+++ b/themes/laurel-leaf/partials/food_today.htm
@@ -1,8 +1,9 @@
       
+<h1>Mittagsangebot</h1>
 
-<p class="text-center">Mittagsangebot {{ "now"|date("l, d.m.Y") }}</p>
+<p>{{ "now"|date("l, d.m.Y") }}</p>
 
-<p class="text-center"><em>{% content 'food_soup.txt' %}</em></p>
+<p><em>{% content 'food_soup.txt' %}</em></p>
 
 {% for today in todays_food %}
 
@@ -51,8 +52,12 @@
 {% endfor %} <!-- Today Food End -->
 
 
-<div class="text-center">
-    <a class="btn btn-info" href="/food-drinks/#lunchoffer">
-        zum Wochenmenü
-    </a>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="text-center">
+            <a class="btn btn-default onblack" href="/food-drinks/#lunchoffer">
+                zum Wochenmenü
+            </a>
+        </div>
+    </div>
 </div>
