--- a/themes/laurel-leaf/partials/site/heroimage.htm
+++ b/themes/laurel-leaf/partials/site/heroimage.htm
@@ -4,7 +4,7 @@ use Milo\HeroImage\Models\HeroImage;
         $this['heroimages'] = HeroImage::limit(3)->get();
     }
 ==
-<div id="heroImage" class="carousel slide" data-ride="carousel">
+<div id="heroImage" class="carousel slide" data-ride="carousel" data-interval="false">
     <ol class="carousel-indicators">
         <li data-target="#heroImage" data-slide-to="0" class="active"></li>
         <li data-target="#heroImage" data-slide-to="1"></li>
