--- a/themes/laurel-leaf/partials/site/sportstv.htm
+++ b/themes/laurel-leaf/partials/site/sportstv.htm
@@ -1,11 +1,7 @@
 {% set newArray = [] %}
 
 <div id="sports-tv-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
-    <ol class="carousel-indicators hidden">
-        <li data-target="#sports-tv-carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#sports-tv-carousel" data-slide-to="1" class=""></li>
-        <li data-target="#sports-tv-carousel" data-slide-to="2" class=""></li>
-    </ol>
+
     <div class="carousel-inner">
 
         {% set first = 0 %}
@@ -17,21 +13,26 @@
             {% endif %}
             {% set first = first + 1 %}
         ">
+            <div class="row">
             {% for item in chunked %}
-            {% if item.datetime|date('d.m.Y') not in newArray %}
-            
-            <p class="date">{{ item.datetime|date('D, d.m.Y') }}</p>
-            {% set newArray = newArray|merge([item.datetime|date('d.m.Y')]) %}
-            {% else %}
-            {% endif %}
-            <p>{{ item.datetime|date('H:i') }}
-            {% if item.home_team.id == 1 %}
-            <strong><i>Conference</i></strong>
-            {% else %}
-            <strong>{{ item.home_team.name }}</strong> v <strong>{{ item.away_team.name }}</strong>
-            {% endif %}
-            <i>{{ item.league.name }}</i></p>
+
+                {% if item.datetime|date('d.m.Y') not in newArray %}
+                    <div class="col-xs-12 date"><small><span class="date-sportstv">{{ item.datetime|date('D, d.m.Y') }}</span></small></div>
+                    {% set newArray = newArray|merge([item.datetime|date('d.m.Y')]) %}
+                {% endif %}
+
+                <div class="col-xs-2 col-sm-1">{{ item.datetime|date('H:i') }}</div>
+
+                {% if item.home_team.id == 1 %}
+                    <div class="col-xs-10 col-sm-11"><strong><i>Conference</i></strong>
+                {% else %}
+                    <div class="col-xs-10 col-sm-11"><strong>{{ item.home_team.name }}</strong> v <strong>{{ item.away_team.name }}</strong>
+                {% endif %}
+
+                <i><sup>{{ item.league.name }}</sup></i>
+                    </div>
             {% endfor %}
+            </div>
         </div>
         {% endfor %}
         
