--- a/themes/laurel-leaf/assets/css/laurelleaf.css
+++ b/themes/laurel-leaf/assets/css/laurelleaf.css
@@ -96,7 +96,7 @@ a {
 
 .navbar-header .navbar-brand {
     padding-left: 247px;
-    background-image: url(/themes/laurel-leaf/assets/images/logo-laurel-leaf.png);
+    background-image: url(../images/logo-laurel-leaf.png);
     background-size: auto 85%;
     background-repeat: no-repeat;
     background-position: 7px 50%;
