--- a/themes/laurel-leaf/assets/css/laurelleaf.css
+++ b/themes/laurel-leaf/assets/css/laurelleaf.css
@@ -576,11 +576,13 @@ h3.menue-header + hr{
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 3px 10px;
+    padding: 5px 10px;
     width: 100%;
     height: 30px;
     color: white;
     background-color: rgba(0,0,0,0.5);
+    font-size: 12px;
+    font-weight: bold;
 }
 
 #gallerySlug div {
