--- a/themes/laurel-leaf/assets/css/laurelleaf.css
+++ b/themes/laurel-leaf/assets/css/laurelleaf.css
@@ -779,3 +779,8 @@ h3.menue-header + hr{
         min-height: 450px;
     }
 }
+
+/* contact - reservation */
+.tripadvisor {
+    margin: 25px 0px;
+}
