footer, contact-reservation

--- a/themes/laurel-leaf/partials/site/footer.htm
+++ b/themes/laurel-leaf/partials/site/footer.htm
@@ -1,7 +1,17 @@
 <div id="footer">
-    <div class="container">
+    <div class="container ptb15">
 
-        <p class="muted credit p50tb">&copy; 2009 - {{ "now"|date("Y") }} Laurel Leaf Irish Pub Vienna.</p>
+    	<h3>The Story of Laurel Leaf Pub</h3>
+
+    	<p>The original Laurel Leaf pub, formerly known
+    		as Molloy´s wine bar, was located in Falls road,
+    		West Belfast.
+    		The Laurel Leaf at this stage was frequented by
+    		political hardliners and nobody was really
+    		surprised, when the bar was bombed out on
+    	Paddy´s day 1973.</p>
+
+        <p class="muted credit">&copy; 2009 - {{ "now"|date("Y") }} Laurel Leaf Irish Pub Vienna.</p>
 
     </div>
 </div>
