soup starters, footer

--- a/themes/laurel-leaf/partials/site/footer.htm
+++ b/themes/laurel-leaf/partials/site/footer.htm
@@ -1,7 +1,7 @@
 <div id="footer">
     <div class="container ptb15">
 
-    	<h3>The Story of Laurel Leaf Pub</h3>
+    	<h3>The Story about the Laurel Leaf</h3>
 
     	<p>The original Laurel Leaf pub, formerly known
     		as Molloy´s wine bar, was located in Falls road,
