base url food_today

--- a/themes/laurel-leaf/partials/food_today.htm
+++ b/themes/laurel-leaf/partials/food_today.htm
@@ -55,7 +55,7 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="text-center">
-            <a class="btn btn-default onblack" href="/food-drinks/#lunchoffer">
+            <a class="btn btn-default onblack" href="{{ url('/food-drinks/#lunchoffer') }}">
                 zum Wochenmenü
             </a>
         </div>
