--- a/themes/laurel-leaf/assets/css/laurelleaf.css
+++ b/themes/laurel-leaf/assets/css/laurelleaf.css
@@ -493,6 +493,15 @@ h3.menue-header + hr{
     margin-top: -9px;
 }
 
+.img-rotate-down-2 {
+    transform: rotate(2deg);
+    margin-top: -9px;
+    box-shadow: 2px 2px 6px black;
+    width: 340px;
+    margin-top: 20px;
+    box-shadow: 2px 2px 6px black;
+}
+
 .image-row {
     margin-bottom: 20px;
     padding-top: 14px;
