general updates, contact plugin

--- a/themes/laurel-leaf/layouts/default.htm
+++ b/themes/laurel-leaf/layouts/default.htm
@@ -54,6 +54,7 @@ theme = "dark-bottom"
         <!-- Content -->
         <section id="layout-content">
             {% page %}
+            {% component 'googleTracker' %}
         </section>
 
         <!-- Footer -->
